--- a/LibreriaPOO/LibreriaPOO.csproj
+++ b/LibreriaPOO/LibreriaPOO.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{87FBBD34-3F0D-4E14-A4BC-B19FE7494DFC}</ProjectGuid>
+    <ProjectGuid>{CA54CB95-4F36-4D02-A982-44D1A1B99219}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BO</RootNamespace>
-    <AssemblyName>BO</AssemblyName>
+    <RootNamespace>LibreriaPOO</RootNamespace>
+    <AssemblyName>LibreriaPOO</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,10 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Alumno.cs" />
-    <Compile Include="Persona.cs" />
-    <Compile Include="Profesor.cs" />
+    <Compile Include="Archivo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TxtArchivo.cs" />
+    <Compile Include="XmlArchivo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
